--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,25 @@ description: >- # this means to ignore newlines until "baseurl:"
   Clean Code + Coffee == Happy Developers 
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: 'https://code.theothermattm.com'
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  theothermattm
+linkedin_username: theothermattm
+mastodon_url: https://mastodon.social/@theothermattm
 
 # Build settings
-theme: minima
+theme: jekyll-theme-clean-blog
 plugins:
   - jekyll-feed
+  - jekyll-paginate
+  - jekyll-sitemap
+
+# console theme vars
+header_pages:
+  - about.md
+
+paginate:           10
+paginate_path:      "/posts/page:num/"
+
+# console theme vars
 
 # Exclude from processing.
 # The following items will not be processed, by default.
