--- a/_config.yml
+++ b/_config.yml
@@ -22,15 +22,18 @@ title: 'Matt @ Work'
 email: mattm@theothermattm.com
 description: >- # this means to ignore newlines until "baseurl:"
   Clean Code + Coffee == Happy Developers 
-baseurl: "/code.theothermattm.com.github.io" # the subpath of your site, e.g. /blog
 url: 'https://theothermattm.github.io/'
 github_username:  theothermattm
 linkedin_username: theothermattm
 mastodon_url: https://mastodon.social/@theothermattm
 
-# Build settings
-# theme: jekyll-theme-clean-blog
+# for github pages
 remote_theme: StartBootstrap/startbootstrap-clean-blog-jekyll
+# for local testing
+theme: jekyll-theme-clean-blog
+
+baseurl: ''
+
 plugins:
   - jekyll-feed
   - jekyll-paginate
