--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 .jekyll-cache/
 .jekyll-metadata
 _site
+# putting this here to make local development a little easier, can force push over
+# it when necessary
+_config.yml
