--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-_config.yml
 .sass-cache/
 .jekyll-cache/
 .jekyll-metadata
 _site
-# putting this here to make local development a little easier, can force push over
-# it when necessary
+# putting this here to make local development a little easier, can force commit over
+# it when necessary, which shouldn't be often
+./_config.yml
