--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ mastodon_url: https://mastodon.social/@theothermattm
 google_analytics: G-C06BSKXDG4
 
 # for github pages
-remote_theme: StartBootstrap/startbootstrap-clean-blog-jekyll
+# remote_theme: StartBootstrap/startbootstrap-clean-blog-jekyll
 # for local testing
-# theme: jekyll-theme-clean-blog
+theme: jekyll-theme-clean-blog
 
 baseurl: ''
 
