--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-archives
+  - jekyll-remote-include
 
 # console theme vars
 header_pages:
