--- a/.github/workflows/jekyll-old.yml
+++ b/.github/workflows/jekyll-old.yml
@@ -1,9 +1,7 @@
 name: Build and Deploy to Github Pages
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   build_and_deploy:
